fixed gapping

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,7 +55,7 @@
   }
 
   .about-picture-description{
-    @apply text-center rounded-xl dark:bg-darkbackgroundshade bg-lightbackgroundshade px-10 py-5;
+    @apply text-left rounded-xl dark:bg-darkbackgroundshade bg-lightbackgroundshade px-10 py-5 ;
   }
 
   /* .secondary-dynamic{
